--- a/www/index.html
+++ b/www/index.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="libs/materialize/css/materialize.min.css">
-    <link rel="stylesheet" href="assets/css/login.css">
-    <title>login</title>
-</head>
-<body class="body-login">
-    <div class="row">
-        <div class="col s12">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/img/yayasan.jpg">
-              <span class="card-title">Yayasan Pendidikan Islam Nurul Mannan</span>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" href="libs/materialize/css/materialize.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Admin Sekolah YPI Nurul Mannan</title>
+    </head>
+    <body class="body-dashboard">
+        <nav class="nav-header-menu"><div class="header-nav"><span class="span-value">YPI Nurul Mannan</span></div></nav>
+        <ul id="slide-out" class="sidenav">
+            <li><a class="subheader">Admin</a></li>
+            <li class="menu-nav sidenav-close" data="dashboard"><a href="#">Dashboard</a></li>
+            <li class="menu-nav sidenav-close" data="lembaga"><a href="#">Lembaga</a></li>
+            <li class="menu-nav sidenav-close" data="karyawan"><a href="#">Karyawan</a></li>
+            <li class="menu-nav sidenav-close" data="kelas"><a href="#">Kelas</a></li>
+            <li class="menu-nav sidenav-close" data="jadwal"><a href="#">Jadwal</a></li>
+            <li class="menu-nav sidenav-close" data="qrcode"><a href="#">QRCode</a></li>
+            <li class="menu-nav sidenav-close" data="laporan"><a href="#">Laporan</a></li>
+            <li><a class="subheader">Karyawan</a></li>
+            <li class="menu-nav sidenav-close" data="profil"><a href="#">Profil</a></li>
+            <li class="menu-nav sidenav-close" data="absensi"><a href="#">Absensi</a></li>
+            <li class="menu-nav sidenav-close" data="logout"><a href="#">Logout</a></li>
+        </ul>
+        <a href="#" data-target="slide-out" class="sidenav-trigger menu-button">
+            <img src="assets/img/outline_menu_black_24dp.png" alt="">
+        </a>
+        
+        <div class="load-pages"></div>
+
+
+        <!-- Modal Structure -->
+        <div id="modal1" class="modal bottom-sheet">
+            <div class="modal-content">
+                <h6><div class="modal-header-view-all-class"></div></h6>
+                <div class="modal-content-view-all-class"></div>
             </div>
-            <div class="card-content">
-                <p><div class="message-login"></div></p>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="username" type="text" class="validate">
-                        <label for="username">Username</label>
-                    </div>
-                    <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
-                        <label for="password">Password</label>
-                    </div>
-                    <a class="waves-effect waves-light btn-small button-login-normally" style='width:100%;' href="#">Login</a><br><br>
-                    <a class="waves-effect red darken-3 btn-small button-login-qrcode" style='width:100%;' href="#">Login QRCode</a>
-                </div> 
+            <div class="modal-footer">
+            <div class="modal-footer-view-all-class"></div>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Tutup</a>
             </div>
-          </div>
         </div>
-      </div>
-    <script src="cordova.js"></script>
-    <script src="libs/firebase/firebase.js"></script>
-    <script src="libs/jquery/jquery-3.4.1.js"></script>
-    <script src="libs/materialize/js/materialize.min.js"></script>
-    <script src="assets/js/login.js"></script>
-</body>
+        <div id="modal2" class="modal bottom-sheet">
+            <div class="modal-content">
+                <h6><div class="modal-header-view-all-class2"></div></h6>
+                <div class="modal-content-view-all-class2"></div>
+            </div>
+            <div class="modal-footer">
+            <div class="modal-footer-view-all-class2"></div>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Tutup</a>
+            </div>
+        </div>
+        <a class="btn-plus-data-class btn-floating-new-data btn-floating btn-large waves-effect waves-light red modal-trigger" href="#modal1">
+            <img src="assets/img/outline_add_black_24dp.png" alt="">
+        </a>
+        <!-- end modal -->
+
+        <div class="progress">
+            <div class="indeterminate"></div>
+        </div>
+        <div class="card-panel green darken-4 message-class">
+            <div class="message-content-view"></div>
+        </div>
+        
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
+        <script src="libs/jquery/jquery-3.4.1.js"></script>
+        <script src="libs/materialize/js/materialize.min.js"></script>
+        <script src="cordova.js"></script>
+        <script src="assets/js/app.js"></script>
+        <script src="assets/js/lembaga.select.js"></script>
+        <script src="assets/js/menu.js"></script>
+        <script src="assets/js/button.js"></script>
+    </body>
 </html>
