--- a/www/index.html
+++ b/www/index.html
@@ -65,11 +65,13 @@
         
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
         <script src="libs/jquery/jquery-3.4.1.js"></script>
+        <script src="libs/jquery/jquery.qrcode.min.js"></script>
         <script src="libs/materialize/js/materialize.min.js"></script>
         <script src="cordova.js"></script>
         <script src="assets/js/app.js"></script>
         <script src="assets/js/lembaga.select.js"></script>
         <script src="assets/js/menu.js"></script>
         <script src="assets/js/button.js"></script>
+        
     </body>
 </html>
