--- a/www/login.html
+++ b/www/login.html
@@ -33,9 +33,12 @@
             </div>
           </div>
         </div>
-      </div>
-    <script src="cordova.js"></script>
-    <script src="libs/firebase/firebase.js"></script>
+    </div>
+    <div class="progress">
+      <div class="indeterminate"></div>
+    </div>
+    <!-- <script src="cordova.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
     <script src="libs/jquery/jquery-3.4.1.js"></script>
     <script src="libs/materialize/js/materialize.min.js"></script>
     <script src="assets/js/login.js"></script>
