create chats users
create chats users but not finis

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
             <li class="menu-nav sidenav-close status-karyawan" data="absensi"><a href="#">Absensi</a></li>
             <li class="menu-nav sidenav-close status-karyawan" data="laporan-karyawan"><a href="#">Laporan</a></li>
 
+            <li class="menu-nav sidenav-close" data="chats"><a href="#">Chats</a></li>
             <li class="menu-nav sidenav-close" data="logout"><a href="#">Logout</a></li>
         </ul>
         <a href="#" data-target="slide-out" class="sidenav-trigger menu-button">
