membuat data siswa
membuat data siswa

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
             <li class="menu-nav sidenav-close status-admin" data="lembaga"><a href="#">Lembaga</a></li>
             <li class="menu-nav sidenav-close status-admin" data="karyawan"><a href="#">Karyawan</a></li>
             <li class="menu-nav sidenav-close status-admin" data="kelas"><a href="#">Kelas</a></li>
+            <li class="menu-nav sidenav-close status-admin" data="data-siswa"><a href="#">Data Siswa</a></li>
             <li class="menu-nav sidenav-close status-admin" data="jadwal"><a href="#">Jadwal</a></li>
             <li class="menu-nav sidenav-close status-admin" data="qrcode"><a href="#">QRCode</a></li>
             <li class="menu-nav sidenav-close status-admin" data="laporan"><a href="#">Laporan</a></li>
@@ -22,9 +23,10 @@
             <li class="status-karyawan"><a class="subheader">Karyawan</a></li>
             <li class="menu-nav sidenav-close status-karyawan" data="profil"><a href="#">Profil</a></li>
             <li class="menu-nav sidenav-close status-karyawan" data="absensi"><a href="#">Absensi</a></li>
+            <li class="menu-nav sidenav-close status-karyawan" data="absensi-siswa"><a href="#">Absensi Siswa</a></li>
             <li class="menu-nav sidenav-close status-karyawan" data="laporan-karyawan"><a href="#">Laporan</a></li>
 
-            <li class="menu-nav sidenav-close" data="chats"><a href="#">Chats</a></li>
+            <!-- <li class="menu-nav sidenav-close" data="chats"><a href="#">Chats</a></li> -->
             <li class="menu-nav sidenav-close" data="logout"><a href="#">Logout</a></li>
         </ul>
         <a href="#" data-target="slide-out" class="sidenav-trigger menu-button">
