--- a/www/pages/admin/chats.html
+++ b/www/pages/admin/chats.html
@@ -1,7 +1,14 @@
-<div class="chats-box-users">
-    <div class="load-chats-all"></div>
+<!-- <div class='chats-box-users'>
+    <div class='row'>
+        <div class='load-chats-all'></div>
+    </div>
+    
+</div> -->
+<div class='chats-box-users'>
+    <ul class='collection'>
+        <div class='load-chats-all'></div>
+    </ul>
 </div>
-
 <div class='button-chats-form'>
     <input id='text-chats' type='text' class='validate' class='' placeholder='text'>
     <button class='btn waves-effect waves-light btn-tambah-chats-users' type='button' style='width:100%'>Kirim</button>
