--- a/www/index.html
+++ b/www/index.html
@@ -10,17 +10,20 @@
     <body class="body-dashboard">
         <nav class="nav-header-menu"><div class="header-nav"><span class="span-value">YPI Nurul Mannan</span></div></nav>
         <ul id="slide-out" class="sidenav">
-            <li class="status-admin"><a class="subheader">Admin</a></li>
+            <li class="no-padding status-admin"><a class="subheader">Admin</a></li>
             <li class="menu-nav sidenav-close status-admin" data="dashboard"><a href="#">Dashboard</a></li>
-            <li class="menu-nav sidenav-close status-admin" data="lembaga"><a href="#">Lembaga</a></li>
-            <li class="menu-nav sidenav-close status-admin" data="karyawan"><a href="#">Karyawan</a></li>
-            <li class="menu-nav sidenav-close status-admin" data="kelas"><a href="#">Kelas</a></li>
-            <li class="menu-nav sidenav-close status-admin" data="data-siswa"><a href="#">Data Siswa</a></li>
             <li class="menu-nav sidenav-close status-admin" data="jadwal"><a href="#">Jadwal</a></li>
             <li class="menu-nav sidenav-close status-admin" data="qrcode"><a href="#">QRCode</a></li>
             <li class="menu-nav sidenav-close status-admin" data="laporan"><a href="#">Laporan</a></li>
-            
-            <li class="status-karyawan"><a class="subheader">Karyawan</a></li>
+
+            <li class="no-padding status-admin"><a class="subheader">Data</a></li>
+            <li class="menu-nav sidenav-close status-admin" data="karyawan"><a href="#">Karyawan</a></li>
+            <li class="menu-nav sidenav-close status-admin" data="lembaga"><a href="#">Lembaga</a></li>
+            <li class="menu-nav sidenav-close status-admin" data="kelas"><a href="#">Kelas</a></li>
+            <li class="menu-nav sidenav-close status-admin" data="jurusan"><a href="#">Jurusan</a></li>
+            <li class="menu-nav sidenav-close status-admin" data="data-siswa"><a href="#">Siswa</a></li>
+
+            <li class="no-padding status-karyawan"><a class="subheader">Karyawan</a></li>
             <li class="menu-nav sidenav-close status-karyawan" data="profil"><a href="#">Profil</a></li>
             <li class="menu-nav sidenav-close status-karyawan" data="absensi"><a href="#">Absensi</a></li>
             <li class="menu-nav sidenav-close status-karyawan" data="absensi-siswa"><a href="#">Absensi Siswa</a></li>
