create data siswa
edit data siswa belum fix

--- a/www/pages/admin/data_siswa.html
+++ b/www/pages/admin/data_siswa.html
@@ -1,3 +1,6 @@
 <div class='row'>
     <div class='load-lembaga-view-select-class'></div>
+    <div class='view-kelas-select-page'></div>
+    <div class='view-jurusan-select-page'></div>
+    <div class="data-siswa-load-class"></div>
 </div>
